基本的博客内容添加以及分类的添加完成

--- a/DayaliBlog.Web/Areas/Admin/Views/Login/Index.cshtml
+++ b/DayaliBlog.Web/Areas/Admin/Views/Login/Index.cshtml
@@ -49,19 +49,10 @@
             <ul>
                 <li><input name="" type="text" class="loginuser" value="admin" onclick="JavaScript:this.value=''" /></li>
                 <li><input name="" type="text" class="loginpwd" value="密码" onclick="JavaScript:this.value=''" /></li>
-                <li><input name="" type="button" class="loginbtn" value="登录" onclick="javascript:window.location='main.html'" /><label><input name="" type="checkbox" value="" checked="checked" />记住密码</label><label><a href="#">忘记密码？</a></label></li>
+                <li><input name="" type="button" class="loginbtn" value="登录" onclick="javascript:window.location='/Admin/Home'" /><label><input name="" type="checkbox" value="" checked="checked" />记住密码</label><label><a href="#">忘记密码？</a></label></li>
             </ul>
-
-
         </div>
-
     </div>
-
-
-
     <div class="loginbm">Copyright © 2048 <a href="http://blog.dayali.net">DayaliBlog</a> <a href="http://www.miitbeian.gov.cn" target="_blank">京ICP备17015678号</a>  仅供学习交流，勿用于任何商业用途</div>
-
-
 </body>
-
 </html>
