--- a/DayaliBlog.Web/Areas/Admin/Views/Blog/Index.cshtml
+++ b/DayaliBlog.Web/Areas/Admin/Views/Blog/Index.cshtml
@@ -1,4 +1,5 @@
-﻿<blockquote class="layui-elem-quote">文章管理</blockquote>
+﻿@model List<DayaliBlog.Model.Blog.T_BLOG_CONTENT>
+<blockquote class="layui-elem-quote">文章管理</blockquote>
 <div style="padding: 10px">
     <div>
         <a class="layui-btn" href="/Admin/Blog/Add">
@@ -11,24 +12,27 @@
             <tr>
                 <th>博客标题</th>
                 <th>博客内容</th>
+                <th>博客类型</th>
                 <th>所属分类</th>
                 <th>发布时间</th>
-                <th>访问量</th>
                 <th>管理</th>
             </tr>
         </thead>
         <tbody>
+        @foreach (DayaliBlog.Model.Blog.T_BLOG_CONTENT content in Model)
+        {
             <tr>
-                <td>.netCore开发</td>
-                <td>这是关于.netCore开发博客内容</td>
-                <td>.net跨平台</td>
-                <td>2017-03-25 12：36</td>
-                <td>245</td>
+                <td>@content.BlogTitle</td>
+                <td>@content.BlogContent</td>
+                <td>@content.BlogTypeName</td>
+                <td>@content.CatelogName</td>
+                <td>@content.LastUptTime</td>
                 <td>
-                    <a href="/Admin/Blog/Add/1"><i class="layui-icon">&#xe642;</i>编辑</a>
-                    <a href="/Admin/Blog/Add/1"><i class="layui-icon">&#x1006;</i>删除</a>
+                    <a href="/Admin/Blog/Add/@content.BlogID"><i class="layui-icon">&#xe642;</i>编辑</a>
+                    <a href="/Admin/Blog/Del/@content.BlogID" onclick="return  confirm('确定要删除吗？')"><i class="layui-icon">&#x1006;</i>删除</a>
                 </td>
             </tr>
+        }
         </tbody>
     </table>
 </div>
