--- a/DayaliBlog.Web/Areas/Admin/Views/Home/Top.cshtml
+++ b/DayaliBlog.Web/Areas/Admin/Views/Home/Top.cshtml
@@ -35,7 +35,7 @@ $(function(){
         <ul>
             <li><span><img src="/adminstyle/images/help.png" title="帮助" class="helpimg" /></span><a href="#">帮助</a></li>
             <li><a href="#">关于</a></li>
-            <li><a href="login.html" target="_parent">退出</a></li>
+            <li><a href="/Admin/Login" target="_parent">退出</a></li>
         </ul>
 
         <div class="user">
