--- a/DayaliBlog.Web/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/DayaliBlog.Web/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -7,6 +7,35 @@
     <title>大鸭梨Blog</title>
     <link href="~/layui/css/layui.css" rel="stylesheet" />
     <script src="~/layui/layui.js"></script>
+    <script>
+        $(function() {
+            $("textarea").val('');
+        });
+    </script>
+    <style>
+        .layui-input-block select {
+            display: block;
+            height: 38px;
+            line-height: 38px;
+            border: 1px solid #e6e6e6;
+            background-color: #fff;
+            border-radius: 2px;
+            padding-left: 10px;
+            min-width: 120px;
+            font-family: inherit;
+            font-size: inherit;
+            font-style: inherit;
+            font-weight: inherit;
+        }
+        .layui-input-block textarea {
+            min-height: 270px;
+            min-width: 300px;
+            width: 80%;
+        }
+        .layui-form input{
+            width: 80%;
+        }
+    </style>
 </head>
 <body>
     <div class="container body-content">
