--- a/DayaliBlog.Web/Areas/Admin/Views/Home/Left.cshtml
+++ b/DayaliBlog.Web/Areas/Admin/Views/Home/Left.cshtml
@@ -12,8 +12,8 @@
     <script type="text/javascript">
 $(function(){
 	//导航切换
-	$(".menuson li").click(function(){
-		$(".menuson li.active").removeClass("active")
+	$(".menuson li").click(function() {
+        $(".menuson li.active").removeClass("active");
 		$(this).addClass("active");
 	});
 
