--- a/DayaliBlog.Web/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/DayaliBlog.Web/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -1,17 +1,11 @@
-﻿@inject Microsoft.ApplicationInsights.AspNetCore.JavaScriptSnippet JavaScriptSnippet
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>大鸭梨Blog</title>
     <link href="~/layui/css/layui.css" rel="stylesheet" />
-    <script src="~/layui/layui.js"></script>
-    <script>
-        $(function() {
-            $("textarea").val('');
-        });
-    </script>
+    <script type="text/javascript" src="~/layui/layui.js"></script>
     <style>
         .layui-input-block select {
             display: block;
@@ -27,6 +21,22 @@
             font-style: inherit;
             font-weight: inherit;
         }
+        .layui-input-inline select {
+            display: block;
+            height: 38px;
+            line-height: 38px;
+            border: 1px solid #e6e6e6;
+            background-color: #fff;
+            border-radius: 2px;
+            padding-left: 10px;
+            min-width: 120px;
+            font-family: inherit;
+            font-size: inherit;
+            font-style: inherit;
+            font-weight: inherit;
+        }
+        
+        
         .layui-input-block textarea {
             min-height: 270px;
             min-width: 300px;
