--- a/DayaliBlog.Web/Areas/Admin/Views/Home/Left.cshtml
+++ b/DayaliBlog.Web/Areas/Admin/Views/Home/Left.cshtml
@@ -44,6 +44,14 @@ $(function(){
                 <li><cite></cite><a href="/Admin/Blog/Index" target="rightFrame">文章管理</a><i></i></li>
             </ul>
         </dd>
+        <dd>
+            <div class="title">
+                <span><img src="/adminstyle/images/leftico01.png" /></span>系统管理
+            </div>
+            <ul class="menuson">
+                <li><cite></cite><a href="/Admin/Sys/Index" target="rightFrame">修改密码</a><i></i></li>
+            </ul>
+        </dd>
     </dl>
 </body>
 </html>
