--- a/DayaliBlog.Web/Areas/Admin/Views/Login/Index.cshtml
+++ b/DayaliBlog.Web/Areas/Admin/Views/Login/Index.cshtml
@@ -13,10 +13,10 @@
     <script language="javascript">
 	$(function(){
     $('.loginbox').css({'position':'absolute','left':($(window).width()-692)/2});
-	$(window).resize(function(){
-    $('.loginbox').css({'position':'absolute','left':($(window).width()-692)/2});
-    })
-});
+	    $(window).resize(function() {
+	        $('.loginbox').css({ 'position': 'absolute', 'left': ($(window).width() - 692) / 2 });
+	    });
+	});
     </script>
 
 </head>
@@ -39,7 +39,7 @@
             <li><a href="#">关于</a></li>
         </ul>
     </div>
-
+    <form class="layui-form"  method="post">
     <div class="loginbody">
 
         <span class="systemlogo"></span>
@@ -47,12 +47,13 @@
         <div class="loginbox">
 
             <ul>
-                <li><input name="" type="text" class="loginuser" value="admin" onclick="JavaScript:this.value=''" /></li>
-                <li><input name="" type="text" class="loginpwd" value="密码" onclick="JavaScript:this.value=''" /></li>
-                <li><input name="" type="button" class="loginbtn" value="登录" onclick="javascript:window.location='/Admin/Home'" /><label><input name="" type="checkbox" value="" checked="checked" />记住密码</label><label><a href="#">忘记密码？</a></label></li>
+                <li><input name="username" type="text" class="loginuser" value="" onclick="JavaScript:this.value=''" /></li>
+                <li><input name="password" type="password" class="loginpwd" value="" onclick="JavaScript:this.value=''" /></li>
+                <li><input name="" type="submit" class="loginbtn" value="登录" /><label><input name="" type="checkbox" value="" checked="checked" />记住密码</label><label><a href="#">忘记密码？</a></label></li>
             </ul>
         </div>
     </div>
+    </form>
     <div class="loginbm">Copyright © 2048 <a href="http://blog.dayali.net">DayaliBlog</a> <a href="http://www.miitbeian.gov.cn" target="_blank">京ICP备17015678号</a>  仅供学习交流，勿用于任何商业用途</div>
 </body>
 </html>
