--- a/DayaliBlog.Web/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/DayaliBlog.Web/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <link href="~/layui/css/layui.css" rel="stylesheet" />
     <script type="text/javascript" src="~/layui/layui.js"></script>
     <style>
-        .layui-input-block select {
+        /*.layui-input-block select {
             display: block;
             height: 38px;
             line-height: 38px;
@@ -34,7 +34,7 @@
             font-size: inherit;
             font-style: inherit;
             font-weight: inherit;
-        }
+        }*/
         
         
         .layui-input-block textarea {
