--- a/DayaliBlog.Web/Views/Home/Index.cshtml
+++ b/DayaliBlog.Web/Views/Home/Index.cshtml
@@ -1,5 +1,87 @@
-﻿@{
-    ViewData["Title"] = "大鸭梨Blog";
-}
-<h1>@ViewData["Title"]</h1>
-
+﻿<div class="blog-main">
+    <div class="heading-blog">
+        The security is main concern while developing applications
+    </div>
+    <a href="/Home/Detail">
+        <img src="/assets/img/1.jpg" class="img-responsive img-rounded" />
+    </a>
+    <div class="blog-info">
+        <span class="label label-primary">Posted on 26th November 2014</span>
+        <span class="label label-success">In Technology</span>
+        <span class="label label-danger">By Jhon</span>
+        <span class="label label-info">
+            <i class="fa fa-thumbs-up"></i>+ 10
+            <i class="fa fa-thumbs-down"></i>-3
+        </span>
+    </div>
+    <div class="blog-txt">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        Fusce nec tellus non diam feugiat commodo. Sed auctor mauris a tristique imperdiet.
+        Nullam egestas sapien non lectus suscipit, quis tristique odio imperdiet.
+        Nullam elit lacus, tincidunt eget faucibus eget, vestibulum venenatis metus.
+        Praesent efficitur quam aliquam mauris sagittis, vel lacinia risus luctus. Ut vitae bibendum ipsum.
+    </div>
+</div>
+<!--BLOG ONE END -->
+<div class="blog-main">
+    <div class="heading-blog">
+        The security is main concern while developing applications
+    </div>
+    <a href="/Home/Detail">
+        <img src="/assets/img/2.jpg" class="img-responsive img-rounded" />
+    </a>
+    <div class="blog-info">
+        <span class="label label-primary">Posted on 26th November 2014</span>
+        <span class="label label-success">In Technology</span>
+        <span class="label label-danger">By Jhon</span>
+        <span class="label label-info">
+            <i class="fa fa-thumbs-up"></i>+ 10
+            <i class="fa fa-thumbs-down"></i>-3
+        </span>
+    </div>
+    <div class="blog-txt">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        Fusce nec tellus non diam feugiat commodo. Sed auctor mauris a tristique imperdiet.
+        Nullam egestas sapien non lectus suscipit, quis tristique odio imperdiet.
+        Nullam elit lacus, tincidunt eget faucibus eget, vestibulum venenatis metus.
+        Praesent efficitur quam aliquam mauris sagittis, vel lacinia risus luctus. Ut vitae bibendum ipsum.
+    </div>
+</div>
+<!--BLOG TWO END -->
+<div class="blog-main">
+    <div class="heading-blog">
+        The security is main concern while developing applications
+    </div>
+    <a href="/Home/Detail">
+        <img src="/assets/img/3.jpg" class="img-responsive img-rounded" />
+    </a>
+    <div class="blog-info">
+        <span class="label label-primary">Posted on 26th November 2014</span>
+        <span class="label label-success">In Technology</span>
+        <span class="label label-danger">By Jhon</span>
+        <span class="label label-info">
+            <i class="fa fa-thumbs-up"></i>+ 10
+            <i class="fa fa-thumbs-down"></i>-3
+        </span>
+    </div>
+    <div class="blog-txt">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        Fusce nec tellus non diam feugiat commodo. Sed auctor mauris a tristique imperdiet.
+        Nullam egestas sapien non lectus suscipit, quis tristique odio imperdiet.
+        Nullam elit lacus, tincidunt eget faucibus eget, vestibulum venenatis metus.
+        Praesent efficitur quam aliquam mauris sagittis, vel lacinia risus luctus. Ut vitae bibendum ipsum.
+    </div>
+</div>
+<!--BLOG THREE END -->
+<nav>
+    <ul class="pagination">
+        <li class="disabled"><a href="#"><span aria-hidden="true">&laquo;</span><span class="sr-only">Previous</span></a></li>
+        <li class="active"><a href="#">1 <span class="sr-only">(current)</span></a></li>
+        <li><a href="#">2 <span class="sr-only"></span></a></li>
+        <li><a href="#">3 <span class="sr-only"></span></a></li>
+        <li><a href="#">4 <span class="sr-only"></span></a></li>
+        <li><a href="#">5 <span class="sr-only"></span></a></li>
+        <li><a href="#"><span aria-hidden="true">&raquo;</span><span class="sr-only">Next</span></a></li>
+    </ul>
+</nav>
+<!--PAGING END -->
