修复bug，添加日志，添加错误页

--- a/DayaliBlog.Web/Views/Shared/_Layout.cshtml
+++ b/DayaliBlog.Web/Views/Shared/_Layout.cshtml
@@ -4,8 +4,9 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta name="description" content="大鸭梨博客" />
+    <meta name="author" content="Allen" />
+    <meta name="keywords" content="大鸭梨博客,大鸭梨,大鸭梨Blog,dayali" />
     <!--[if IE]>
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <![endif]-->
