--- a/DayaliBlog.Web/Areas/Admin/Views/Home/Index.cshtml
+++ b/DayaliBlog.Web/Areas/Admin/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>大鸭梨博客后台首页</title>
+    <title>大鸭梨博客</title>
 </head>
 <frameset rows="88,*" cols="*" frameborder="no" border="0" framespacing="0">
     <frame src="/Admin/Home/Top" name="topFrame" scrolling="No" noresize="noresize" id="topFrame" title="topFrame" />
