--- a/DayaliBlog.Web/Areas/Admin/Views/Home/Top.cshtml
+++ b/DayaliBlog.Web/Areas/Admin/Views/Home/Top.cshtml
@@ -11,10 +11,10 @@
     <script type="text/javascript">
 $(function(){
 	//顶部导航切换
-	$(".nav li a").click(function() {
-	    $(".nav li a.selected").removeClass("selected");
-		$(this).addClass("selected");
-	})
+    $(".nav li a").click(function () {
+        $(".nav li a.selected").removeClass("selected");
+        $(this).addClass("selected");
+    });
 })
     </script>
 
@@ -39,7 +39,7 @@ $(function(){
         </ul>
 
         <div class="user">
-            <span>admin</span>
+            <span><a href="/Home" target="_parent" style="color: white">我的博客</a></span>
             <i>消息</i>
             <b>5</b>
         </div>
