--- a/DayaliBlog.Web/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/DayaliBlog.Web/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>大鸭梨Blog</title>
+    <title>大鸭梨博客</title>
     <link href="~/layui/css/layui.css" rel="stylesheet" />
     <script type="text/javascript" src="~/layui/layui.js"></script>
     <style>
