--- a/DayaliBlog.Web/Views/Shared/_Layout.cshtml
+++ b/DayaliBlog.Web/Views/Shared/_Layout.cshtml
@@ -119,7 +119,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12 text-center set-foot">
-            Copyright © 2048 | <a href="http://www.dayali.net/Home" target="_blank" title="大鸭梨博客">大鸭梨博客</a>&nbsp;<a href="http://www.miitbeian.gov.cn" target="_blank">京ICP备17015678号</a>
+            Copyright © 2048 | <a href="./Home" target="_blank" title="大鸭梨博客">大鸭梨博客</a>&nbsp;<a href="http://www.miitbeian.gov.cn" target="_blank">京ICP备17015678号</a>&nbsp;<a href="/Admin/Login" target="_self" style="color:cornflowerblue">博客管理</a>
         </div>
     </div>
 </div>
