--- a/DayaliBlog.Web/Areas/Admin/Views/Login/Index.cshtml
+++ b/DayaliBlog.Web/Areas/Admin/Views/Login/Index.cshtml
@@ -5,7 +5,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>大鸭梨博客后台登录</title>
+    <title>后台登录</title>
     <link href="/adminstyle/css/style.css" rel="stylesheet" type="text/css" />
     <script src="/adminstyle/js/jquery.js" type="text/javascript"></script>
     <script src="/adminstyle/js/cloud.js" type="text/javascript"></script>
