修改Program.cs和StartUp.cs

--- a/DayaliBlog.Web/Views/Shared/_Layout.cshtml
+++ b/DayaliBlog.Web/Views/Shared/_Layout.cshtml
@@ -1,5 +1,4 @@
-﻿@inject Microsoft.ApplicationInsights.AspNetCore.JavaScriptSnippet JavaScriptSnippet
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -26,7 +25,6 @@
             cursor: pointer;
         }
     </style>
-    @Html.Raw(JavaScriptSnippet.FullScript)
 </head>
 <body ng-app="myApp">
 <section class="header-section">
